archivos_yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf-ingress
  namespace: pf-app-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Especifica la clase de Ingress
  rules:
  - host: empresa.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pf-service
            port:
              number: 80
